--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,20 @@
-
+<% include ../partials/header.ejs %>
 
      <div class="container">
        <div class="jumbotron">
            <h1 class="display-4">Hello, This is Tejinder Kaur</h1>
-           <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+           <p class="lead">Welcome to My Portfolio <br>
+           This portfolio will give you information about me.</p>
            <hr class="my-4">
-           <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+           <p>I am pursuing post-graduation diploma in Centennial College with Software Engineering Technology program.. It is my last semester.
+                I am graduated in Bachelor of Computer Applications from back home.During my academic studies at Centennial College I have developed key technical skills in the area of programming, website development and database management. 
+                 I want to become a software developer.  </p>
            <p class="lead">
-             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+             
            </p>
          </div>
      </div>
+<% include ../partials/footer.ejs %>
 
 
-  </body>
-</html>
+ 
